# devdefender-lab

./: .env.example  .gitignore  CLEANUP_PLAN.md  DESIGN.md  PHASE2_HANDOFF.md  PHASE3_DESIGN.md  PHASE3_HANDOFF.md  README.md  RELEASE_CHECKLIST.md  environment.yml  package-lock.json  package.json  plan.md  pyproject.toml
deck/: slides.md
sample_repo/: payment_api.py
scripts/: __init__.py  agent_briefing_input.py  answer_briefing_clarification.py  apply_briefing_feedback_plan.py  artifact_secret_smoke.py  audio_provider_smoke.py  briefing_execution_gate.py  briefing_feedback_plan.py  browser_interruption_smoke.py  evidence_chain_smoke.py  evidence_packet_smoke.py  install_project_briefing_room_skill.ps1  interruption_smoke.py  livekit_browser_smoke.py  livekit_provider_smoke.py  livekit_token_smoke.py  media_route_smoke.py  meeting_automation_smoke.py  meeting_provisioner_smoke.py  openclaude_patch_smoke.py  openclaude_plan_smoke.py  phase1_room_closure_smoke.py  phase3_meeting_closure_smoke.py  phase4_livekit_interruption_smoke.py  phase4_livekit_tts_smoke.py  phase4_voice_defense_smoke.py  presenter_cue_smoke.py  project_briefing_room.py  project_briefing_room_doctor.py  project_briefing_room_smoke.py  publish_github.ps1  replay_agent_trace.py  room_acceptance_smoke.py  room_replay_smoke.py  room_visual_smoke.py  slide_sync_smoke.py  third_party_smoke.py  tts_anchor_smoke.py  webrtc_meeting_smoke.py  zoom_web_discovery_smoke.py
tests/: test_agent_briefing_input.py  test_agent_gateway.py  test_answer_briefing_clarification.py  test_apply_briefing_feedback_plan.py  (+45 more)
(+32 files in other folders)
