[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devdefender-lab"
version = "0.1.0"
description = "Phase 1 integration lab for AI code defense workflows."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.74",
  "networkx>=3.2",
  "openai>=1.99.0",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
