[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devdefender-lab"
version = "0.1.0"
description = "Lightweight project briefing workflow for code agents."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
